Fix reset bot logic for old chats